# dynamic_dispatch

./: Pipfile  README.md  setup.cfg
dynamic_dispatch/: __init__.py  _class.py  _func.py  _typeguard.py
tests/: test_class.py  test_func.py
