[metadata]
name=dynamic_dispatch
description=dynamic dispatch decorator for classes and functions
version=1.0.0
url=https://github.com/XevoInc/dynamic_dispatch
long_description=file: README.md,
long_description_content_type=text/markdown
author=Ryan Rowe
author_email=rrowe@xevo.com
license=Apache License, Version 2.0
license_file=LICENSE
python_requires=>=3.7
classifiers=
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
  Typing :: Typed

[options]
setup_requires =
  # Minimal version with most `setup.cfg` bug fixes.
  setuptools >= 38.3.0
packages = dynamic_dispatch
test_suite = tests

[options.extras_require]
typeguard =
  typeguard >= 2.9.1
dev =
  typeguard >= 2.9.1
  flake8
  twine

[flake8]
max-line-length = 120